Updated Vite config to optimize chunks and resolve client issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "src/**/*.ts",
       "src/**/*.tsx",
       "*.js"
-    ],
+, "src/components/ui/flickering-grid.jsx"    ],
     "exclude": [
       "node_modules",
       "dist"
